--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Firts proyect with express and TypeScript",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "author": "Juan Neftaly",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
