--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "Juan Neftaly",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "colors": "^1.4.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
